objects/CRM_AudienceUpload__c.object
<CustomObject>
    <fields>
        <fullName>CRM_AudienceUploadJunction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audience Upload Junction</label>
        <referenceTo>CRM_AudienceUploadJunction__c</referenceTo>
        <relationshipLabel>Audience Uploads</relationshipLabel>
        <relationshipName>Audience_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_CampaignName__c</fullName>
        <label>Campaign Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_IsNotAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be marked as true in case related contact is not available in SFDC during Campaign Activation process</description>
        <label>Is Not Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once related contact is added as CM or not available in SFDC this field will be marked as true</description>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WundermanId__c</fullName>
        <label>Wunderman Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Audience Upload</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Audience Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audience Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>